--- a/icu4c/source/io/CMakeLists.txt
+++ b/icu4c/source/io/CMakeLists.txt
@@ -53,7 +53,7 @@ target_include_directories(${lib_NAME} PRIVATE
 # LIBS = $(LIBICUUC) $(LIBICUI18N) $(DEFAULT_LIBS)
 target_link_libraries(${lib_NAME} PUBLIC ${ICULIBS_I18N})
 
-setup_icu_lib_target("${lib_NAME}" "${private_src_DIR}/sources.lst" "${private_src_DIR}" "${public_src_DIR}")
+setup_icu_lib_target("${lib_NAME}" "${private_src_DIR}/sources.txt" "${private_src_DIR}" "${public_src_DIR}")
 
 install(
   FILES ${${lib_NAME}_PUBLIC_HEADERS}
