--- a/icu4c/source/layoutex/CMakeLists.txt
+++ b/icu4c/source/layoutex/CMakeLists.txt
@@ -63,7 +63,7 @@ endif()
 # LIBS = $(LIBICUUC) $(LIBICULE) $(DEFAULT_LIBS)
 target_link_libraries(${lib_NAME} PUBLIC ${ICULIBS_UC} ${ICULIBS_LE})
 
-setup_icu_target("${lib_NAME}" "${private_src_DIR}/sources.lst" "${private_src_DIR}")
+setup_icu_target("${lib_NAME}" "${private_src_DIR}/sources.txt" "${private_src_DIR}")
 
 install(
   FILES ${${lib_NAME}_PUBLIC_HEADERS}
